...
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatButton
                    android:textSize="@dimen/button"
                    android:onClick="@{()->callback.navigateToGamePage()}"
                    android:id="@+id/intro_start_game_button"
                    android:text="@string/start_game"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:background="@drawable/rounded_background"
...
